<resources>
    <string name="app_name">PlanningPoker</string>
    <string name="activity_main_btn_create">Create</string>
    <string name="activity_main_btn_join">Join</string>
    <string name="activity_main_title">PlanningPoker</string>
    <string name="activity_round_result_btn_again">Again</string>
    <string name="activity_round_result_btn_finish">Finish</string>
    <string name="activity_find_room_txt_pincode">Pincode</string>
    <string name="activity_find_room_txt_nickname">Nickname</string>
    <string name="activity_find_room_btn_join">Join</string>
    <string name="activity_find_room_btn_create">Create</string>
    <string name="activity_find_room_error_title">Pincode Exist!</string>
    <string name="activity_find_room_error_message">Pindcode exist, please select another one.</string>
    <string name="activity_waiting_btn_start">Start</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="activity_no_name_error_title">No Name!</string>
    <string name="activity_no_name_error_message">Please enter a nickname</string>
</resources>
